#87 - Resolves all the feature requests, also adds the the dimension of the crop image on the cropper.

--- a/app/assets/stylesheets/justified.css
+++ b/app/assets/stylesheets/justified.css
@@ -36,3 +36,12 @@
 .photo-container:hover .protograph-popup-trigger {
   opacity: 1;
 }
+.protograph-crop-tooltip {
+  position: absolute;
+  bottom: 5px;
+  right: 5px;
+  background: black;
+  opacity: 0.6;
+  color: white;
+  z-index: 600;
+}
